Fix the scrollbar jumping when loading - force vertical scrollbar at all times.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,17 +1,15 @@
 @import 'tc-styles';
-
 // This is the partial where we load all the Roboto fonts for Webpack
 @import 'fonts';
 
-// Make the fonts render properly; under Chrome & Firefox Roboto render really
-// bad, so we have to force geometricPrecision.
-
-html,
 body {
   @include roboto;
   font-size: $tc-body-md;
   line-height: 5 * $base-unit;
+  // Better typography
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
+  // Prevenet jumping of elements, force scrollbar always-on
+  overflow-y: scroll;
 }
